<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Individual_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/B2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/B3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_3" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/B5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/B6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/B8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/B9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_10" />

            <Button
                android:id="@+id/B11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_11" />

            <Button
                android:id="@+id/B12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_button"
                android:text="@string/btn_12" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>