<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mode_Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/mode_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/square_button"
                android:scrollbars="horizontal"
                android:text="@string/mode_1" />

            <Button
                android:id="@+id/mode_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/mode_2" />

            <Button
                android:id="@+id/mode_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/mode_3" />

            <Button
                android:id="@+id/mode_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/mode_4" />

            <Button
                android:id="@+id/mode_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/mode_5" />

        </LinearLayout>

    </FrameLayout>